Simplify cafeteria prototype
Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>